Added asteroid destroy animation and started separating code into modules

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Space Shooter</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="script.js"></script>
+    <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div id="gamespace">
+    <button id="pausebutton">Pause</button>
     <div id="shots"></div>
     <div id="meteorites"></div>
 </div>
