updated asteroids (previously meteorites) to be object-oriented and added pause functionality to their animations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div id="gamespace">
     <button id="pausebutton">Pause</button>
     <div id="shots"></div>
-    <div id="meteorites"></div>
+    <div id="asteroids"></div>
 </div>
 
 </body>
