Updated ship to be object-oriented and added score, ship hp indicators, ship death and a better pause screen

--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
 <div id="gamespace">
-    <button id="pausebutton">Pause</button>
+    <div id="pausebutton"></div>
+    <p id="scorelabel">Score: 0</p>
+    <div id="shiphpbox"></div>
+    <div id="planethpbox"></div>
+    <div id="pausescreen"></div>
     <div id="shots"></div>
     <div id="asteroids"></div>
+
+
+
+
 </div>
 
 </body>
