Added restart option after death, popping animations for button presses and for losing hp

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 <div id="gamespace">
-    <div id="pausebutton"></div>
+    <div id="pausebutton" class="circularbutton"></div>
     <p id="scorelabel">Score: 0</p>
     <div id="shiphpbox"></div>
     <div id="planethpbox"></div>
     <div id="pausescreen"></div>
+    <div id="restartoverlay">
+        <p id="restartlabel">Restart Game</p>
+        <div id="restartbutton" class="circularbutton"></div>
+    </div>
     <div id="shots"></div>
     <div id="asteroids"></div>
 
