Added help section and removed initial planethp parts

--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="helpbutton" class="circularbutton">
+    <span class="helptext">Hold <img class="helpimg" src="assets/mouseleftclick.png" alt="left mouse button"> or <img class="helpimg" src="assets/spacebutton.png" alt="spacebar"> to shoot projectiles <img class="helpprojimg" src="assets/spaceshipprojectile.png" alt="projectile"> at asteroids <img src="assets/asteroid1.png" alt="asteroid" class="helphpimg">
+        <br><br>Move the <img src="assets/spaceship.png" alt="spaceship" class="helphpimg"> with <img class="helpimg" src="assets/mousemove.png" alt="mouse">
+        <br><br>Press the <img src="assets/pausebutton1.png" alt="pausebutton" class="helpimg">/<img src="assets/pausebutton2.png" alt="unpausebutton" class="helpimg"> buttons in the top left corner to pause/unpause the game
+        <br><br>The <img src="assets/spaceship.png" alt="spaceship" class="helphpimg"> icons on the right indicate your health, after hits they will become depleted <img src="assets/spaceshipdepleted.png" alt="spaceship depleted" class="helphpimg">. If you run out of them the game is over
+        <br><br>The asteroids <img src="assets/asteroid1.png" alt="asteroid" class="helphpimg"> have various sizes. Bigger ones have more health, but give more points to your score
+        <br><br>After an asteroid hits you, you'll have a brief period of invulnerability indicated with <img src="assets/spaceshipshielded.png" alt="shielded ship" class="helphpimg"></span>
+</div>
 <div id="gamespace">
     <div id="pausebutton" class="circularbutton"></div>
+
     <p id="scorelabel">Score: 0</p>
     <div id="shiphpbox"></div>
-    <div id="planethpbox"></div>
     <div id="pausescreen"></div>
     <div id="restartoverlay">
         <p id="restartlabel">Restart Game</p>
