Score table styling

--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
 </div>
 <div id="scoretablebox">
     <table id="scoretable">
-        <tr id="scoretableheader">
-            <th>Name</th>
-            <th>Score</th>
+        <tr id="scoreboardlabel">
+            <th colspan="2">Scoreboard</th>
         </tr>
-        <tr><td id="scoreplaceholder" colspan="2">No scores yet</td></tr>
+        <tr id="scoretableheader">
+            <th id="nameheader">Name</th>
+            <th id="scoreheader">Score</th>
+        </tr>
+        <tr id="scoreplaceholder"><td colspan="2">No scores yet</td></tr>
     </table>
 </div>
 </body>
