--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <span class="helptext">
         Hold <img class="helpimg" src="assets/mouseleftclick.png" alt="left mouse button"> or <img class="helpimg" src="assets/spacebutton.png" alt="spacebar"> to shoot projectiles <img class="helpprojimg" src="assets/projectile1.png" alt="projectile"> at asteroids <img src="assets/asteroid1.png" alt="asteroid" class="helphpimg">
         <br><br>Move the <img src="assets/spaceship.png" alt="spaceship" class="helphpimg"> with <img class="helpimg" src="assets/mousemove.png" alt="mouse">
-        <br><br>Press the <img src="assets/pausebutton1.png" alt="pausebutton" class="helpimg">/<img src="assets/pausebutton2.png" alt="unpausebutton" class="helpimg"> buttons in the top left corner to pause/unpause the game
+        <br><br>Press the <img src="assets/pausebutton1.png" alt="pausebutton" class="helpimg">/<img src="assets/pausebutton2.png" alt="unpausebutton" class="helpimg"> buttons in the top left corner or press <img class="helpimg" src="assets/mouseleftclick.png" alt="p button"> to pause/unpause the game
         <br><br>The <img src="assets/spaceship.png" alt="spaceship" class="helphpimg"> icons on the right indicate your health, after hits they will become depleted <img src="assets/spaceshipdepleted.png" alt="spaceship depleted" class="helphpimg">. If you run out of them the game is over
         <br><br>The asteroids <img src="assets/asteroid1.png" alt="asteroid" class="helphpimg"> have various sizes. Bigger ones have more health, but give more points to your score
         <br><br>After an asteroid hits you, you'll have a brief period of invulnerability indicated with <img src="assets/spaceshipshielded.png" alt="shielded ship" class="helphpimg">
@@ -29,11 +29,11 @@
     <img id="pausebutton" class="circularbutton" src="assets/pausebutton2.png" alt="pause/start button">
 
     <div id="savescoresystem">
-        <img id="savescorebutton" class="circularbutton" alt="save score button" src="assets/savebutton.png">
-        <label><input type="text" placeholder="Enter your name" id="nameinput"></label>
         <div id="scoreinfo">
             <p>Save your score</p>
         </div>
+        <div><label for="nameinput" hidden=""></label><input type="text" placeholder="Enter your name" id="nameinput"></div>
+        <img id="savescorebutton" class="circularbutton" alt="save score button" src="assets/savebutton.png">
     </div>
 
 
